--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
         {% endblock %}
         {% block javascripts %}
             {% javascripts 'js/*' %}
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
             <script src="{{ asset_url }}"></script>
             {% endjavascripts %}
         {% endblock %}
@@ -21,8 +21,10 @@
     <header>
         {% block header %}{% endblock %}
     </header>
+    <nav>
+        {% block nav %}{% endblock %}
+    </nav>
     <body>
-        {% block body %}{% endblock %}
-
+        {% block body %}  {% endblock %}
     </body>
 </html>
