--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
         {% block javascripts %}
             {% javascripts 'js/*' %}
             <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+            {#<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>#}
             <script src="{{ asset_url }}"></script>
             {% endjavascripts %}
         {% endblock %}
@@ -25,6 +26,8 @@
         {% block nav %}{% endblock %}
     </nav>
     <body>
+        {% block sidebar %} {% endblock %}
         {% block body %}  {% endblock %}
     </body>
+
 </html>
