--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,13 +1,23 @@
+{% extends ':security:index.html.twig' %}
+
+{% block javascripts %}
+    {{ parent() }}
+{% endblock %}
+
+{% block body %}
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
+    <div class="col-sm-offset-2 needLogin">
+        Для просмотра <br> каталога <br> необходимо авторизоваться
+        <img src="{{ asset('hand.png') }}"/>
+    </div>
+{#<form action="{{ path('login') }}" method="post">#}
+    {#<label for="username">Username:</label>#}
+    {#<input type="text" id="username" name="_username" value="{{ last_username }}" />#}
 
-<form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+    {#<label for="password">Password:</label>#}
+    {#<input type="password" id="password" name="_password" />#}
 
     {#
         If you want to control the URL the user
@@ -15,5 +25,6 @@
         <input type="hidden" name="_target_path" value="/account" />
     #}
 
-    <button type="submit">login</button>
-</form>
+    {#<button type="submit">login</button>#}
+{#</form>#}
+{% endblock %}
