--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block body %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+{#{% if error %}#}
+    {#<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
+{#{% endif %}#}
     <div class="col-sm-offset-2 needLogin">
         Для просмотра <br> каталога <br> необходимо авторизоваться
         <img src="{{ asset('hand.png') }}"/>
