--- a/app/Resources/views/security/index.html.twig
+++ b/app/Resources/views/security/index.html.twig
@@ -49,13 +49,51 @@
     </script>
 {% endblock %}
 {% block header %}
-    {% include ':menu:header.html.twig' %}
-{% endblock %}
-{% block nav %}
-    <div class="mainMenu">
+    {#{% include ':menu:header.html.twig' %}#}
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid ">
+            <div class="navbar-header col-xs-4 col-sm-2">
+                <a class="navbar-brand" href="/">Brand</a>
+            </div>
+            <div class="icon-bar hidden-sm hidden-md hidden-lg">
+                <a class="active" href="#" onclick="openSearchForm()">
+                    <i class="glyphicon glyphicon-search col-xs-4"></i>
+                </a>
+                <a href="#" data-toggle="modal" data-target="#loginModal">
+                    <i class="glyphicon glyphicon-log-in col-xs-4"></i>
+                </a>
+                <a href="#" data-toggle="modal" data-target="#registrationModal">
+                    <i class="glyphicon glyphicon-pencil col-xs-4"></i>
+                </a>
+            </div>
+            <form class="navbar-form navbar-left col-sm-12 hidden-xs" id="searchForm" role="search"
+                  onsubmit="alert('submit!');return false;">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Ищу...">
+                    <span class="input-group-btn">
+                            <button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
+                        </span>
+                </div>
+            </form>
+            <div class="nav navbar-nav navbar-right col-sm-3 hidden-xs" id="login_logup">
+                {% if is_granted("USER_ROLE") %}
+                    Hi {{ app.user.username }}
+                {% else %}
+                    {#<button class="btn btn-default" data-toggle="modal" data-target="#loginModal">Вход</button>#}
+                    {#<button class="btn btn-default" data-toggle="modal" data-target="#registrationModal">Регистрация</button>#}
+                    {% include ':security:unauthorized.html.twig' %}
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+    {% if not is_granted("USER_ROLE") %}
+        {% include ':security:securityModals.html.twig' %}
+    {% endif %}
+    {% block nav %}
         {{ knp_menu_render('main', {'currentClass': 'active'}) }}
-    </div>
+    {% endblock %}
 {% endblock %}
+
 {% block body %}
     {{ knp_menu_render('sidebar', {'currentClass': 'active'}) }}
 {% endblock %}
