--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,7 +1,14 @@
+/*html {*/
+    /*height: 100%; //позволит растянуть сайт на 100% высоты*/
+/*}*/
+
 body {
     font-family: 'Roboto, sans-serif', sans-serif;
     margin: 0;
     height: 100%;
+    width: 100%;
+    /*background: linear-gradient(to bottom,  #fff4e6, #ffffff);*/
+
 }
 
 .header {
@@ -10,10 +17,15 @@ body {
 }
 
 .navbar {
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    /*box-shadow: 0 0 10px rgba(0,0,0,0.5);*/
     background:  #f59ca0;
     border: none;
+    /*margin: 0;*/
     /*border-color: inherit;*/
+}
+
+.navbar-nav {
+    margin: 0;
 }
 .openLoginForm {
     float: right;
@@ -140,20 +152,27 @@ label {
 }
 
 .mainMenu {
-    padding-top: 15px;
+    /*padding-top: 15px;*/
     margin-top:  -20px;
-    padding-bottom: 25px;
-    width: auto;
-    height: auto;
-    background-color: #fff4e6;
+    /*padding-bottom: 30px;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+
     /*overflow: hidden;*/
     /*height: 100px;*/
+    background-color: #fff4e6;
 }
 
+.mainMenu ul {
+    width: 100%;
+    /*height: 100%;*/
+    /*clear: both;*/
+}
 .mainMenu li {
     display: inline-block;
-    float: left;
-    padding-left: 5%;
+    /*float: left;*/
+    text-align: center;
+    /*padding-left: 5%;*/
     font-size: 14px;
     font-family: tahoma,arial,sans-serif;
 }
@@ -162,16 +181,21 @@ li a {
     color: #bb646d;
 }
 
-a:hover {
+a:hover li:hover {
     color: #f59ca0;
     text-decoration: none;
+    background-color: inherit;
 }
 
 .dropdown-menu {
     border-radius: 0;
     /*color: #bb646d;*/
-    background-color: #ffecde;
+    background-color: #fff4e6;
     border: none;
+}
+
+.dropdown-menu li {
+    display: block;
 }
 
 .dropdown-menu > li > a:hover {
@@ -196,7 +220,7 @@ a:hover {
 
 .needLogin img {
     position: absolute;
-    float:right;
+    float: right;
     top: 20px;
     /*left: 0;*/
 }
@@ -206,7 +230,7 @@ li {
 }
 
 li.first.last ul {
-    margin-left: -20px;
+    /*margin-left: -20px;*/
 }
 
 
