--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -1,8 +1,16 @@
-{#{% extends 'base.html.twig' %}#}
-{% extends 'AppBundle:default:index.html.twig' %}
+{% extends ':security:index.html.twig' %}
 
 {% block javascripts %}
     {{ parent() }}
 {% endblock %}
-{% block sidebar %}
+{% block body %}
+    <div class="col-md-offset-2 col-md-8" style="margin-top: 3%">
+        <div class="col-md-4" style="background-color: #1ab7ea;">
+            <img src="{{ asset('https://vk.com/images/gifts/256/312.jpg') }}" />
+        </div>
+        <div class="col-md-offset-1 col-md-4">
+            <h1>Конфета №123</h1>
+            <span style="font-size: 16px; color: #bb646d">10 р.</span>
+        </div>
+    </div>
 {% endblock %}
