--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,30 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}Sweetland{% endblock %}</title>
+        {% block stylesheets %}
+            <link href="{{ asset('bundles/app/css/bootstrap.css') }}" rel="stylesheet" />
+            <link href="{{ asset('bundles/app/css/bootstrap.min.css') }}" rel="stylesheet" />
+            <link href="{{ asset('bundles/app/css/bootstrap-social.css') }}" rel="stylesheet" />
+            <link href="{{ asset('bundles/app/css/custom.css') }}" rel="stylesheet" />
+        {% endblock %}
+        {% block javascripts %}
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+            <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/validation.js') }}"></script>
+        {% endblock %}
+        <link rel="icon" type="image/x-icon" href="{{ asset('candy.ico') }}" />
     </head>
+    <header>
+        {% block header %}{% endblock %}
+    </header>
+    <nav>
+        {% block nav %}{% endblock %}
+    </nav>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block sidebar %} {% endblock %}
+        {% block body %}  {% endblock %}
     </body>
+
 </html>
