--- a/app/Resources/views/menu/header.html.twig
+++ b/app/Resources/views/menu/header.html.twig
@@ -1,8 +1,4 @@
-{#{% extends ':security:index.html.twig' %}#}
-{#{% extends ':security:unauthorized.html.twig' %}#}
-
 {% block javascripts %}
-    {#{{ parent() }}#}
     <script src="{{ 'js/validation.js' }}"></script>
 {% endblock %}
 {% block header %}
@@ -19,7 +15,7 @@
                     <i class="glyphicon glyphicon-log-in col-xs-4"></i>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#registrationModal">
-                    <i class="glyphicon glyphicon-pencil col-xs-4"></i>
+                    <i class="glyphicon glyphicon-user col-xs-4"></i>
                 </a>
             </div>
             <form class="navbar-form navbar-left col-sm-12 hidden-xs" id="searchForm" role="search"
@@ -35,8 +31,6 @@
                 {% if is_granted("USER_ROLE") %}
                     Hi {{ app.user.username }}
                 {% else %}
-                    {#<button class="btn btn-default" data-toggle="modal" data-target="#loginModal">Вход</button>#}
-                    {#<button class="btn btn-default" data-toggle="modal" data-target="#registrationModal">Регистрация</button>#}
                     {% include ':security:unauthorized.html.twig' %}
                 {% endif %}
             </div>
