--- a/app/Resources/views/products/edit.html.twig
+++ b/app/Resources/views/products/edit.html.twig
@@ -1,1 +1,9 @@
-Edit product
+{% extends ':security:index.html.twig' %}
+{% block body %}
+    <h1>Редактирование</h1>
+    <div class="col-xs-12 col-md-offset-1 col-md-4">
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+        {{ form_end(form) }}
+    </div>
+{% endblock %}
