--- a/app/Resources/views/security/securityModals.html.twig
+++ b/app/Resources/views/security/securityModals.html.twig
@@ -6,31 +6,25 @@
                 <h4 class="modal-title" id="myModalLabel">Вход</h4>
             </div>
             <div class="modal-body">
-
-                {{ form_start(loginForm, { 'attr': {
-                    'class': 'login',
-                    'onsubmit': "return loginValidate()" },
-                    'action': path('login'),
-                    'method': 'POST'
-                }) }}
-                <div class="col-sm-offset-2 col-sm-8">
-                    <div class="error">
-                        <span id="loginError"></span>
-                        {#{% if error %}#}
-                        {#<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-                        {#{% endif %}#}
+                <form action="{{ path('login') }}" method="post" class="login" name="login">
+                    <div class="col-sm-offset-2 col-sm-8">
+                        <div class="error">
+                            <span id="loginError"></span>
+                        </div>
+                        <label for="username">Логин:</label>
+                        <input type="text" id="username" name="_username" />
+                        <label for="password">Пароль:</label>
+                        <input type="password" id="password" name="_password" />
+                        <div style="display: inline">
+                            <input type="button" id="login_user" value="Войти" class="btn btn-default col-xs-12 col-sm-6"
+                                   style="margin-right: 16px; margin-top: 10px;"/>
+                            <a href="#" data-toggle="modal" data-target="#forgotPasswordModal" style="padding-top: 7px;"
+                               data-dismiss="modal" aria-hidden="true" class="col-xs-12 col-sm-5">
+                                Забыли пароль?
+                            </a>
+                        </div>
                     </div>
-                    {{ form_widget(loginForm) }}
-                    <div style="display: inline">
-                        <input type="submit" value="Войти" class="btn btn-default col-xs-12 col-sm-6"
-                               style="margin-right: 16px;"/>
-                        <a href="#" data-toggle="modal" data-target="#forgotPasswordModal" style="padding-top: 7px;"
-                           data-dismiss="modal" aria-hidden="true" class="col-xs-12 col-sm-5">
-                            Забыли пароль?
-                        </a>
-                    </div>
-                </div>
-                {{ form_end(loginForm) }}
+                </form>
             </div>
         </div>
     </div>
@@ -69,7 +63,11 @@
                 <h4 class="modal-title" id="myModalLabel">Восстановление пароля</h4>
             </div>
             <div class="modal-body">
-                {{ form_start(forgotPasswordForm, { 'attr': {'class': 'forgotPassword' } }) }}
+                {{ form_start(forgotPasswordForm, { 'attr': {
+                    'class': 'forgotPassword' },
+                    'action': path('forgot_password'),
+                    'method': 'POST'
+                }) }}
                 <div class="col-sm-offset-2 col-sm-8">
                     <div class="error">
                         <span id="emailForgotError"></span>
@@ -81,3 +79,14 @@
         </div>
     </div>
 </div>
+<script>
+    $('#register_user').click(function () {
+        registrationValidate();
+    });
+    $('#login_user').click(function () {
+        loginValidate();
+    });
+    $('#send_email').click(function () {
+        forgotValidate();
+    });
+</script>
