--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,13 +1,14 @@
-/*html {*/
-    /*height: 100%; //позволит растянуть сайт на 100% высоты*/
-/*}*/
+html {
+    height: 100%;
+}
 
 body {
     font-family: 'Roboto, sans-serif', sans-serif;
     margin: 0;
     height: 100%;
     width: 100%;
-    /*background: linear-gradient(to bottom,  #fff4e6, #ffffff);*/
+    background: linear-gradient(to bottom,  #fff4e6, #ffffff);
+    background-repeat: no-repeat;
 
 }
 
@@ -229,6 +230,10 @@ li {
     list-style-type: none;
 }
 
+h1 {
+    margin-top: 0;
+}
+
 li.first.last ul {
     /*margin-left: -20px;*/
 }
@@ -242,5 +247,41 @@ ol.breadcrumb {
 .product:hover {
     z-index: 1;
     box-shadow: 0 0 8px rgba(0,0,0,0.5);
+}
+
+.product {
+    padding-bottom: 1%;
+    position: relative;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.return * {
+    color: #974c53;
+    padding-top: 1%;
+    /*height: 100%;*/
+}
+
+.admin {
+    right: 0;
+    position: absolute;
+}
+
+#edit_product {
+    width: 280px;
+
+    /*width: 400px;*/
+}
+
+#edit_product div {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1%;
+}
+div textarea {
+    margin-left: 2%;
 }
 
