--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -58,59 +58,16 @@
                 <!--/noindex-->
             </div>
         </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gifts/256/312.jpg') }}" />
-            <strong>Конфета №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default" onclick="login" >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gift/-147/256.jpg') }}" />
-            <strong>Антон №Волк</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gift/-149/256.jpg') }}" />
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div>
-                <img src="{{ asset('https://vk.com/images/gift/873/256.jpg') }}" />
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div>
-                <img src="{{ asset('https://cs14029.userapi.com/c840130/v840130072/8d0a/SN3QMiAa6vs.jpg') }}" />
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
+
+
+        <div id="grid">
+
         </div>
         {#<h1>{{ category.name }}</h1>#}
     </div>
+    <script>
+        $( "div" ).greenify({
+            color: "orange"
+        });
+    </script>
 {% endblock %}
