--- a/app/Resources/views/products/edit.html.twig
+++ b/app/Resources/views/products/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends ':security:index.html.twig' %}
+{% extends ':home:index.html.twig' %}
 {% block body %}
     <h1>Редактирование</h1>
     <div class="col-xs-12 col-md-offset-1 col-md-4">
