ajax grid without filters

--- a/app/Resources/views/products/create.html.twig
+++ b/app/Resources/views/products/create.html.twig
@@ -14,4 +14,5 @@
             output.src = URL.createObjectURL(event.target.files[0]);
         };
     </script>
+    {#<script src="{{ '/js/categoriesList.js' }}"></script>#}
 {% endblock %}
