--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -7,8 +7,8 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
-    background: linear-gradient(to bottom,  #fff4e6, #ffffff);
-    background-repeat: no-repeat;
+    /*background: linear-gradient(to bottom,  #fff4e6, #ffffff);*/
+    /*background-repeat: no-repeat;*/
 
 }
 
@@ -182,6 +182,12 @@ li a {
     color: #bb646d;
 }
 
+.sidebar {
+    margin-top: 10%;
+    /*background-color: #ffecde;*/
+}
+
+
 a:hover li:hover {
     color: #f59ca0;
     text-decoration: none;
@@ -288,9 +294,24 @@ img {
     height: 80px;
 }
 
-input[type="checkbox"] {
-    /*position: absolute;*/
-    /*width: 61%;*/
-    /*height: 8%;*/
+.panel {
+    overflow: hidden;
+    background-color: #efa89d;
 }
+
+.catalog {
+    background-color: #fff8f1;
+}
+
+.pagination>li>a{
+    color: #f6fff4;
+    background-color: #ffc0c1;
+    border-radius: 0;
+    border: 0;
+}
+
+.pagination>.active>a, .pagination>.active>a:hover, .pagination>.active>a:focus {
+    background-color: #f3848d;
+}
+
 
