--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ 'js/validation.js' }}"></script>
+    {#<script src="{{ 'js/validation.js' }}"></script>#}
     {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>#}
     <script>
         let openSearch = false;
