--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -2,9 +2,10 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="{{ '/plugin/jquery.plugin.js' }}"></script>
     <script>
         $(document).ready(function () {
-            $(document).on('mouseenter', '.product', function () {console.log('open');
+            $(document).on('mouseenter', '.product', function () {
                 $(this).find(".admin").show();
             }).on('mouseleave', '.product', function () {
                 $(this).find(".admin").hide();
@@ -13,104 +14,39 @@
     </script>
 {% endblock %}
 {% block body %}
-    <div class="col-md-1 hidden-xs hidden-sm">
+    <div class="col-md-2 hidden-xs hidden-sm">
         {{ knp_menu_render('sidebar', {'currentClass': 'active'}) }}
     </div>
     <div class="col-xs-12 hidden-md hidden-lg">
         {{ knp_menu_render('accordeon', {'currentClass': 'active'}) }}
     </div>
-    <div class="col-xs-12 col-md-offset-1 col-md-9">
-        {#<ol class="breadcrumb">#}
-        {#<li><a href="#">Home</a></li>#}
-        {#<li><a href="#">Library</a></li>#}
-        {#<li class="active">Data</li>#}
-        {#</ol>#}
-        <h1> Категория </h1> <a ></a>
-        <div id="catalog_sorter" class="sort" data-current="popular">
-            <span>Сортировать по:</span>|
-            <a id="price" data-value="price" href="#">
-                <span>цене</span>
-            </a> |
-            <a id="sale" data-value="sale" href="#">
-                <span>названию</span>
-            </a>
-        </div>
-        <div class="pager">
-            <div class="pageToInsert" data-current="1" data-show-prefix="True">
-                <span class="total many">
-                    Товаров:
-                        <span>767</span>
-                </span>
-                <span class="active">1</span>
-                <a href="#">2</a>
-                <span>...</span>
-                <a href="#">755</a>
-                <a class="next" href="#">→</a>
-            </div>
-            <div class="count">
-                <!--noindex-->
-                <div class="pageSizer">
-                    <span>Показывать по:</span>
-                    <a class="pagesize_10" href="#">10</a>
-                    <a class="active pagesize_20" href="#">20</a>
-                    <a class="pagesize_30" href="#">30</a>
-                </div>
-                <!--/noindex-->
-            </div>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gifts/256/312.jpg') }}" />
-            <strong>Конфета №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default" onclick="login" >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gift/-147/256.jpg') }}" />
-            <strong>Антон №Волк</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div class="admin btn-group btn-group-sm" role="group" aria-label="..." style="display: none;">
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default " >
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-            </div>
-            <img src="{{ asset('https://vk.com/images/gift/-149/256.jpg') }}" />
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div>
-                <img src="{{ asset('https://vk.com/images/gift/873/256.jpg') }}" />
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
-        </div>
-        <div class="product col-xs-12 col-sm-6 col-md-3">
-            <div>
-                <img src="{{ asset('https://cs14029.userapi.com/c840130/v840130072/8d0a/SN3QMiAa6vs.jpg') }}" />
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
-        </div>
-        {#<h1>{{ category.name }}</h1>#}
+    <div class="col-xs-12 col-md-9">
+        <h1> Категория </h1> {#<h1>{{ category.name }}</h1>#} <a ></a>
+        <div id="grid"></div>
     </div>
+    {% if is_granted("ROLE_MODERATOR") %}
+        <script>
+            $('#grid').ajaxgrid({
+                url: '/products', // URL, с которого тянуть данные
+                sortableColumns: ['name', 'price'], // массив с именами полей сущности, по которым должна быть возможна сортировка
+                filterableColumns: ['name', 'price', 'manufacturer'], // массив с именами полей сущности, по которым должна быть возможна фильтрация
+                itemsPerPage: [6, 12, 20], // количество единиц на страницу для пагинации
+                page: 1,
+                admin: true
+            });
+        </script>
+    {% else %}
+        <script>
+            $('#grid').ajaxgrid({
+                url: '/products', // URL, с которого тянуть данные
+                sortableColumns: ['name', 'price'], // массив с именами полей сущности, по которым должна быть возможна сортировка
+                filterableColumns: ['name', 'price', 'manufacturer'], // массив с именами полей сущности, по которым должна быть возможна фильтрация
+                itemsPerPage: [6, 12, 20], // количество единиц на страницу для пагинации
+                page: 1,
+                admin: false
+            });
+        </script>
+    {% endif %}
+
+
 {% endblock %}
