--- a/app/Resources/views/security/securityModals.html.twig
+++ b/app/Resources/views/security/securityModals.html.twig
@@ -1,3 +1,6 @@
+{% block javascripts %}
+    <script src="{{ 'js/validation.js' }}"></script>
+{% endblock %}
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
