--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -1,85 +1,1 @@
-{% extends ':home:index.html.twig' %}
-
-{% block javascripts %}
-    {{ parent() }}
-{% endblock %}
-{% block body %}
-    <div class="col-md-1 hidden-xs hidden-sm">
-        {{ knp_menu_render('sidebar', {'currentClass': 'active'}) }}
-    </div>
-    {#{{ knp_menu_render('accordeon', {'currentClass': 'active'}) }}#}
-
-    <div class="col-md-offset-1 col-md-9">
-        <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Library</a></li>
-            <li class="active">Data</li>
-        </ol>
-
-        <h3 style="margin-top: 0"> Категория </h3>
-        <div id="catalog_sorter" class="sort" data-current="popular">
-            <span>Сортировать по:</span>
-            </a> |
-            <a id="price" data-value="price" href="#">
-                <span>цене</span>
-            </a> |
-            <a id="sale" data-value="sale" href="#">
-                <span>названию</span>
-            </a>
-        </div>
-        <div class="pager">
-            <div class="pageToInsert" data-current="1" data-show-prefix="True">
-                <span class="total many">
-                    Товаров:
-                        <span>767</span>
-                </span>
-                <span class="active">1</span>
-                <a href="#">2</a>
-                <span>...</span>
-                <a href="#">755</a>
-                <a class="next" href="#">→</a>
-            </div>
-            <div class="count">
-                <!--noindex-->
-                <div class="pageSizer">
-                    <span>Показывать по:</span>
-                    <a class="pagesize_10" href="#">10</a>
-                    <a class="active pagesize_20" href="#">20</a>
-                    <a class="pagesize_30" href="#">30</a>
-                </div>
-                <!--/noindex-->
-            </div>
-        </div>
-        <div class="product col-xs-12 col-md-3">
-            <div>
-            </div>
-            <strong>Конфета №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-md-3">
-            <div>
-            </div>
-            <strong>Антон №Волк</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-md-3">
-            <div>
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span><br>
-        </div>
-        <div class="product col-xs-12 col-md-3">
-            <div>
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
-        </div>
-        <div class="product col-xs-12 col-md-3">
-            <div>
-            </div>
-            <strong>Подарки №123</strong><br>
-            <span>10 р.</span>
-        </div>
-        {#<h1>{{ category.name }}</h1>#}
-    </div>
-{% endblock %}
+Table of categories
