Create and update products with views

--- a/app/Resources/views/products/create.html.twig
+++ b/app/Resources/views/products/create.html.twig
@@ -1,6 +1,11 @@
 {% extends ':home:index.html.twig' %}
 
 {% block body %}
+    {% for flash_message in app.session.flashbag.get('error') %}
+        <div class="alert alert-info" role="alert" style="margin: 1% 15%">
+            {{ flash_message }}
+        </div>
+    {% endfor %}
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
         <h1 style="margin: 2% 0 4% 0">Добавление нового товара</h1>
         {{ form_start(form) }}
